2007-02-07  Paul Brook  <paul@codesourcery.com>

	* configure.tgt: Add arm*-*-uclinux-*eabi.

2007-02-05  Dave Brolley  <brolley@redhat.com>
	    Richard Sandiford  <rsandifo@redhat.com>
	    DJ Delorie  <dj@redhat.com>
	    Stan Cox  <scox@redhat.com>
	    Jim Blandy  <jimb@redhat.com>
	    Nick Clifton  <nickc@redhat.com>
	    Jim Wilson  <wilson@redhat.com>
	    Frank Ch. Eigler  <fche@redhat.com>
	    Graydon Hoare  <graydon@redhat.com>
	    Ben Elliston  <bje@redhat.com>
	    John Healy  <jhealy@redhat.com>
	    Richard Henderson  <rth@redhat.com>

	* Makefile.am (CPU_TYPES): Add mep.
	(TARGET_CPU_CFILES): Add tc-mep.c.
	(TARGET_CPU_HFILES): Add tc-mep.h.
	(DEPTC_mep_elf): New variable.
	(DEPTC_mep_coff): Likewise.
	(DEPOBJ_mep_coff, DEPOBJ_mep_elf, DEP_mep_coff, DEP_mep_elf): Likewise.
	* configure.in: Support mep.
	* configure.tgt: Likewise.
	* config/tc-mep.c: New file.
	* config/obj-elf.c: New file.
	* config/tc-mep.c: New file.
	* config/tc-mep.h: New file.
	* testsuite/gas/mep: New testsuite with content.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* cgen.c (gas_cgen_install_complex_reloc): Removed.
	(complex_reloc_installation_howto): Removed.

2007-02-05  Dave Brolley  <brolley@redhat.com>
	    Graydon Hoare  <graydon@redhat.com>
	    DJ Delorie  <dj@redhat.com>
	    Catherine Moore  <clm@redhat.com>
	    Michael Chastain  <chastain@redhat.com>
	    Frank Ch. Eigler  <fche@redhat.com>

	* symbols.c (use_complex_relocs_for): New, to decide
	when to use complex relocs. Add signed RELC support.
	(resolve_symbol_value): Call use_complex_relocs_for. Unconditionally
	encode expression symbols as mangled complex relocation symbols (when
	compiled with -DOBJ_COMPLEX_RELOC).
	(symbol_relc_make_sym,value,expr): New traversal/conversion routines.
	* cgen.c (gas_cgen_md_apply_fix3):  Only set signed_p if RELC. Call
	encode_addend with new args. Modify to get start, length from